--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wireframe Exercise</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="utf-8">
+	<title>HW-Wireframe</title>
+
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-    <div class="wrapper">
-        <header>header</header>
-        <nav>nav</nav>
-        <section>section
-            <article>article
-                <div>
-                    <h1>h1,</h1>
-                    <h2>h2,</h2>
-                    <h3>h3</h3>
-                </div>
-                <p>p</p>
-            </article>
-         </section>
-        
-        <footer>footer</footer>
-    </div>
-</body>
 
+	<header>header</header>
+	
+	<nav>nav</nav>
+
+	<div class="wrapper clearfix">
+		
+		<section>
+		 	section
+			
+			<article>
+				article
+				
+					<div class="articleContent"><h1>h1, h2, h3</h1></div>
+					<div class="articleContent"><p>p</p></div>
+			
+			</article>
+		</section>
+	
+		<aside>aside</aside>
+	
+	</div>
+
+	<footer>footer</footer>
+
+</body>
 </html>
